--- a/nosotros.html
+++ b/nosotros.html
@@ -5,104 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - Crokelet</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .historia-section {
-            padding: 40px;
-            background-color: #f8f9fa;
-            border-radius: 15px;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        .valores-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin: 30px 0;
-        }
-
-        .valor-card {
-            text-align: center;
-            padding: 30px;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .valor-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .valor-icono {
-            font-size: 2.5em;
-            color: #4ecdc4;
-            margin-bottom: 15px;
-        }
-
-        .equipo-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            margin: 40px 0;
-        }
-
-        .miembro-equipo {
-            text-align: center;
-            padding: 20px;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-        }
-
-        .miembro-equipo img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin-bottom: 15px;
-            object-fit: cover;
-        }
-
-        .timeline {
-            max-width: 800px;
-            margin: 40px auto;
-            position: relative;
-        }
-
-        .timeline-item {
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            margin: 20px 0;
-            position: relative;
-            border-left: 4px solid #4ecdc4;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-        }
-
-        .certificaciones {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            flex-wrap: wrap;
-            margin: 30px 0;
-        }
-
-        .certificacion {
-            text-align: center;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-            width: 200px;
-        }
-
-        .certificacion img {
-            width: 100px;
-            height: 100px;
-            object-fit: contain;
-            margin-bottom: 10px;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -116,7 +18,9 @@
             </ul>
         </nav>
 
-        <div class="logo">Cro<span>kelet</span></div>
+        <div class="logo">
+            <img src="images/logo.png" alt="Crokelet Logo" class="logo-img">
+        </div>
 
         <div class="historia-section">
             <h1>Nuestra Historia</h1>
@@ -172,20 +76,20 @@
         <h2>Nuestra Trayectoria</h2>
         <div class="timeline">
             <div class="timeline-item">
-                <h3>2015</h3>
-                <p>Apertura de nuestra primera tienda especializada</p>
+                <h3>Agosto de 2024</h3>
+                <p>La empresa se establece formalmente, sentando las bases de su misión y visión, con un enfoque en crear croquetas saludables y nutritivas para perros y gatos.</p>
             </div>
             <div class="timeline-item">
-                <h3>2017</h3>
-                <p>Expansión de servicios veterinarios y nutricionales</p>
+                <h3>Septiembre de 2024</h3>
+                <p>Se exploran diversas combinaciones de ingredientes naturales, asegurando que cada uno cumpla con los valores de la empresa y no tenga efectos secundarios negativos.</p>
             </div>
             <div class="timeline-item">
-                <h3>2020</h3>
-                <p>Lanzamiento de nuestra línea premium Crokelet</p>
+                <h3>Octubre de 2024</h3>
+                <p>Se contratan expertos en nutrición animal y en producción alimentaria, consolidando un equipo alineado con los valores de la empresa.</p>
             </div>
             <div class="timeline-item">
-                <h3>2024</h3>
-                <p>Inauguración de nuestro centro integral de bienestar animal</p>
+                <h3>Nobiembre de 2024</h3>
+                <p>Se finalizan los estudios y pruebas de producto, obteniendo una fórmula que cumple con los altos estándares definidos en la fase de valores.</p>
             </div>
         </div>
 
